<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".agregarContactoFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/agregar_contacto"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:fontFamily="serif"
        android:padding="30dp"
        android:text="@string/agregar"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:padding="15dp">

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName"
                    android:maxLength="200"
                    android:digits="@string/no_special_char">
                </EditText>

                <EditText
                    android:id="@+id/apellido_paterno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellido_paterno"
                    android:inputType="textPersonName"
                    android:layout_gravity="center_vertical"
                    android:gravity="top"
                    android:maxLength="200"
                    android:digits="@string/no_special_char">
                </EditText>

                <EditText
                    android:id="@+id/apellido_materno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellido_materno"
                    android:inputType="textPersonName"
                    android:layout_gravity="center_vertical"
                    android:gravity="top"
                    android:maxLength="200"
                    android:digits="@string/no_special_char">
                </EditText>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10">

                    <EditText
                        android:id="@+id/telefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_phone"
                        android:drawableTint="@color/teal_700"
                        android:drawablePadding="5dp"
                        android:hint="@string/telefono"
                        android:inputType="phone"
                        android:layout_gravity="center_vertical"
                        android:gravity="top"
                        android:maxLength="10"
                        android:layout_weight="5">
                    </EditText>
                    <EditText
                        android:id="@+id/celular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_cellphone"
                        android:drawableTint="@color/teal_700"
                        android:drawablePadding="5dp"
                        android:hint="@string/celular"
                        android:inputType="phone"
                        android:layout_gravity="center_vertical"
                        android:gravity="top"
                        android:maxLength="10"
                        android:layout_weight="4">
                    </EditText>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/direccion">
                    </TextView>
                </LinearLayout>
                <EditText
                    android:id="@+id/calle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/calle"
                    android:inputType="textPostalAddress"
                    android:layout_gravity="center_vertical"
                    android:gravity="top"
                    android:maxLength="200"
                    android:digits="@string/no_special_char">
                </EditText>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10">
                    <EditText
                        android:id="@+id/num_exterior"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/exterior"
                        android:inputType="number"
                        android:layout_gravity="center_vertical"
                        android:gravity="top"
                        android:maxLength="10"
                        android:layout_weight="6">
                    </EditText>
                    <EditText
                        android:id="@+id/num_interior"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/interior"
                        android:inputType="textPostalAddress"
                        android:layout_gravity="center_vertical"
                        android:gravity="top"
                        android:maxLength="20"
                        android:layout_weight="4"
                        android:digits="@string/no_special_char2">
                    </EditText>
                </LinearLayout>
                <EditText
                    android:id="@+id/colonia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/colonia"
                    android:inputType="textPostalAddress"
                    android:layout_gravity="center_vertical"
                    android:gravity="top"
                    android:maxLength="100"
                    android:digits="@string/no_special_char2">
                </EditText>
                <EditText
                    android:id="@+id/ciudad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ciudad"
                    android:inputType="textPostalAddress"
                    android:layout_gravity="center_vertical"
                    android:gravity="top"
                    android:maxLength="100"
                    android:digits="@string/no_special_char">
                </EditText>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10">
                    <EditText
                        android:id="@+id/estado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/estado"
                        android:inputType="text"
                        android:layout_gravity="center_vertical"
                        android:gravity="top"
                        android:maxLength="5"
                        android:layout_weight="5"
                        android:digits="@string/no_special_char">
                    </EditText>
                    <EditText
                        android:id="@+id/codigo_postal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cp"
                        android:inputType="number"
                        android:layout_gravity="center_vertical"
                        android:gravity="top"
                        android:maxLength="5"
                        android:layout_weight="5">
                    </EditText>
                </LinearLayout>
                <EditText
                    android:id="@+id/correo_electronico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_gravity="center_vertical"
                    android:gravity="top"
                    android:maxLength="50">
                </EditText>

                <EditText
                    android:id="@+id/fecha_nacimiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_calendar"
                    android:drawableTint="@color/teal_700"
                    android:drawablePadding="5dp"
                    android:gravity="top"
                    android:hint="@string/fecha_nacimiento"
                    android:inputType="date"
                    android:maxLength="50">
                </EditText>

                <EditText
                    android:id="@+id/tipo_de_contacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tipo"
                    android:inputType="textPersonName"
                    android:layout_gravity="center_vertical"
                    android:gravity="top"
                    android:maxLength="50"
                    android:digits="@string/no_special_char">
                </EditText>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnEnviar"
                        android:layout_width="267dp"
                        android:layout_height="60dp"
                        android:paddingTop="24dp"
                        android:layout_gravity="center"
                        android:padding="14dp"
                        android:text="Guardar"
                        android:textSize="15sp"
                        android:textAllCaps="false"
                        android:textColor="@color/white">

                    </Button>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>







</LinearLayout>